# Team-Projeckts

./: README.md
docker/weatherapp/: Cargo.toml  Dockerfile  README.md
docker/weatherapp/resources/: styles.css
docker/weatherapp/src/: api.rs
docker/weatherapp/src/view/: current_weather.rs  five_days_forecast.rs  location_date.rs
esp32-web-server/: README.md  secrets.h.example  temperature.ino
weatherapp/: .gitignore  README.md  index.html  test.txt
weatherapp/src/: api.rs  lib.rs  main.rs
weatherapp/src/view/: current_info.rs  description.rs  icons.rs  mod.rs  roomtemperature.rs  search_bar.rs  three_hours_forecast.rs
web_scraping/: Makefile  README.md  main.py  requirements.txt
web_scraping/data/: data.py
web_scraping/src/: extract_pdf.py
web_scraping/utils/: driver.py
