[package]
name = "weatherapp"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
console_log = "1"
chrono = { version = "0.4", features = ["clock"] }
gloo-timers = "0.3.0"